<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:hk="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_screen_feedback_title" android:key="feedback_settings">
    <CheckBoxPreference android:key="vibrate_on" android:title="@string/vibrate_on_keypress" android:persistent="true"/> 
    <org.kiibord.hpop.VibratePreference
        android:defaultValue="40" hk:minValue="5" hk:maxValue="200" hk:logScale="true" hk:displayFormat="%.0f ms" android:key="vibrate_len" android:title="@string/title_vibrate_len" android:persistent="true"/>
    <CheckBoxPreference android:key="sound_on" android:title="@string/sound_on_keypress" android:persistent="true" /> 
    <org.kiibord.hpop.AutoSummaryListPreference
        android:key="pref_click_method" android:title="@string/title_click_method" android:entryValues="@array/click_method_values" android:entries="@array/click_method_entries" android:defaultValue="@string/default_click_method" android:persistent="true"/>
    <org.kiibord.hpop.SeekBarPreferenceString
        android:defaultValue="@string/default_click_volume" hk:minValue="0" hk:maxValue="1" hk:asPercent="true" android:key="pref_click_volume" android:title="@string/title_click_volume" android:persistent="true"             />
    <CheckBoxPreference android:key="popup_on" android:title="@string/popup_on_keypress" android:persistent="true"             android:defaultValue="@bool/default_popup_preview"/> 
</PreferenceScreen>
