<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:hk="http://schemas.android.com/apk/res-auto"
    android:key="prefs_view" android:title="@string/pref_screen_view_title" > 
    <PreferenceCategory android:key="graphics_settings" android:title="@string/pref_screen_view_title" > 
        <org.kiibord.hpop.AutoSummaryListPreference
            android:defaultValue="@string/default_hint_mode"
            android:entries="@array/hint_modes"
            android:entryValues="@array/hint_modes_values"
            android:key="pref_hint_mode"
            android:persistent="true"
            android:title="@string/title_hint_mode" />
        <org.kiibord.hpop.SeekBarPreferenceString
            android:defaultValue="1.0" hk:minValue="0.5"
            hk:maxValue="2.0" hk:logScale="true" hk:asPercent="true" android:key="pref_label_scale_v2"
            android:persistent="true" android:title="@string/title_label_scale" />
        <org.kiibord.hpop.SeekBarPreferenceString
            android:defaultValue="1.0"
            hk:minValue="0.5"
            hk:maxValue="8.0"
            hk:logScale="true"
            hk:asPercent="true"
            android:key="pref_candidate_scale"
            android:persistent="true"
            android:title="@string/title_candidate_scale" />
        <org.kiibord.hpop.SeekBarPreferenceString
            android:defaultValue="1.0"
            hk:minValue="0.5"
            hk:maxValue="1.0"
            hk:step="0.05"
            hk:asPercent="true"
            android:key="pref_top_row_scale"
            android:persistent="true"
            android:title="@string/title_top_row_scale" />
        <org.kiibord.hpop.AutoSummaryListPreference
            android:defaultValue="0"
            android:entries="@array/keyboard_layout_modes"
            android:entryValues="@array/keyboard_layout_modes_values"
            android:key="pref_keyboard_layout"
            android:persistent="true"
            android:title="@string/keyboard_layout" />
        <org.kiibord.hpop.AutoSummaryListPreference
            android:defaultValue="@string/default_render_mode"
            android:entries="@array/render_mode_entries"
            android:entryValues="@array/render_mode_values"
            android:key="pref_render_mode"
            android:persistent="true"
            android:title="@string/title_render_mode" />
    </PreferenceCategory>
</PreferenceScreen>